Fix how we work boxes on smaller resolutions

--- a/src/assets/custom/css/custom-layout-buttons.scss
+++ b/src/assets/custom/css/custom-layout-buttons.scss
@@ -166,5 +166,5 @@ $white-colour: #fff;
   }
 
   .how-we-work-container {
-      max-height:220px;
+      height: 220px;
   }
